progress on homepage

--- a/filetransfer/pubspec.yaml
+++ b/filetransfer/pubspec.yaml
@@ -20,3 +20,6 @@ flutter:
   uses-material-design: true
   assets:
      - lib/assets/splashImage.png
+     - lib/assets/sendImage.png
+     - lib/assets/receivedImage.png
+     - lib/assets/itemImage.png
