--- a/tradeoffs/tradeoff/pubspec.yaml
+++ b/tradeoffs/tradeoff/pubspec.yaml
@@ -20,3 +20,5 @@ flutter:
   uses-material-design: true
   assets:
      - lib/assets/swordT.png
+     - lib/assets/lockT.png
+     - lib/assets/shieldT.png
